# jmp.blue

./: .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  README.md  deno.json  package.json  pnpm-lock.yaml
components/: nav.tsx  profile.tsx
pages/: _app.tsx  index.tsx
pages/api/auth/: [...nextauth].ts  logout.ts
pages/projects/: index.tsx
routes/: _app.tsx  index.tsx
src/: main.rs
templates/: index.html
